vlib/v/checker/tests/comptime_value_d_only_d_in_fixed_size_array.vv
struct St {
	fsa [$env('size')]int
}
